resolves #319 i18n: print original label in i18n interface
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot/i18n/i18n-label.component.css
+++ b/bot/admin/web/src/app/bot/i18n/i18n-label.component.css
@@ -43,6 +43,13 @@
   opacity: 0.5;
 }
 
+.i18n-label__title__original_label {
+  margin-left: 10px;
+  font-size: 11px;
+
+  opacity: 0.5;
+}
+
 .i18n-label__title__delete {
   margin-left: auto;
 }
